# copilot-product-sample5

./: Dockerfile  PLAN.md  README.md  SPEC.md  package-lock.json  package.json  server.js
lsimpledev/: build.gradle
lsimpledev/src/demo/res/layout/: fragment_lsimple_information.xml
lsimpledev/src/demo/res/values/: strings.xml
lsimpledev/src/internal/res/layout/: fragment_lsimple_information.xml
lsimpledev/src/internal/res/values/: colors.xml  themes.xml
lsimpledev/src/main/: AndroidManifest.xml
lsimpledev/src/main/cpp/: CMakeLists.txt  FileRecorder.cpp  RawFloatRecorder.cpp
lsimpledev/src/main/java/jp/co/sstinc/audio/: FileRecorder.java  RawFloatRecorder.java
lsimpledev/src/main/java/jp/co/sstinc/file/: CompatFIleCopy.kt
lsimpledev/src/main/java/jp/co/sstinc/log/: CsvWriter.kt  LogWriter.kt
lsimpledev/src/main/java/jp/co/sstinc/lsimpledev/: BuildConfigUtil.kt  DemoFormatUtil.kt  FileOutputSettingsFragment.kt  LSimpleFragment.kt  LSimpleViewModel.kt  (+5 more)
lsimpledev/src/main/res/drawable/: ic_circle.xml  ic_graphic_eq.xml  ic_play_arrow.xml
lsimpledev/src/main/res/layout/: activity_main.xml  fragment_file_output_settings.xml  fragment_lsimple.xml  fragment_menu.xml  fragment_server_settings.xml  item_receive_history.xml
lsimpledev/src/main/res/menu/: menu_main.xml
lsimpledev/src/main/res/navigation/: nav_graph.xml
lsimpledev/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
lsimpledev/src/main/res/values-night/: colors.xml  themes.xml
public/: app.js  index.html  style.css
test/: api.test.js  assets.test.js  decode.test.js
(+5 files in other folders)
